--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/images/icon.png" />
+    <link rel="icon" type="image" href="/images/icon.png" />
     <title>My Todo List...</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -17,9 +17,7 @@
                 <!-- <button onclick="addTask()">Add</button> -->
             </div>
             <ul id="list-container">
-                <!-- <li class="checked">Task 1</li>
-                <li>Task 2</li>
-                <li>Task 3</li> -->
+                <!-- here our li will be added through javascript -->
             </ul>
 
         </div>
