new feature added (task completed percentage)

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                 <!-- here our li will be added through javascript -->
             </ul>
 
+            <div id="completion-percentage">0% tasks completed</div>
+
         </div>
     </div>
     <script src="script.js"></script>
